--- a/index.html
+++ b/index.html
@@ -276,8 +276,132 @@
       </section>
 
       <section class="virtual-event-section">
-        <div class="section-container"></div>
+        <div class="section-container two-column">
+          <div class="col-left">
+            <p class="subtitle">Virtual events</p>
+            <h2>Checkout Sessions now!</h2>
+            <p>
+              Swipe Sessions is our annual conference - it's now available to
+              watch on demand! Check it out and become an "internet economy"
+              genius, and see how Swipe can transform the way you do business
+              online.
+            </p>
+            <button class="primary-button with-icon">
+              Start now
+              <img src="assets/arrow-right-light.svg" alt="" />
+            </button>
+          </div>
+
+          <div class="col-right">
+            <div class="swipe-sessions-card">
+              <div class="card-top">
+                <img src="assets/swipe-sessions.png" alt="swipe-sessions" />
+                <div class="avatars">
+                  <img src="assets/avatar1.png" alt="avatar1" />
+                  <img src="assets/avatar2.png" alt="avatar2" />
+                </div>
+              </div>
+              <div class="card-bottom">
+                <div class="card-content">
+                  <p class="subtitle">Keynote</p>
+                  <p class="secondary-text">
+                    Everything you need to know about the internet economy
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
+
+      <section class="get-started-section">
+        <div class="section-container two-column">
+          <div class="col-left">
+            <h2>What are you waiting for?</h2>
+            <p>
+              Explore <a href="#">Swipe</a>now or, create an account and start
+              accepting payments today! if you need a custom package for your
+              business, let's chat today.
+            </p>
+            <button class="primary-button with-icon">
+              Start now <img src="assets/arrow-right-light.svg" alt="" />
+            </button>
+          </div>
+          <div class="col-right">
+            <div class="card-container">
+              <div class="card">
+                <img src="assets/shield-icon.png" alt="shield" />
+                <h3>Always know what you pay</h3>
+                <p class="secondary-text">
+                  Integrated per-transaction pricing with no hidden fees.
+                </p>
+                <button class="secondary-button with-icon">
+                  Pricing details
+                </button>
+              </div>
+
+              <div class="card">
+                <img src="assets/bars-icon.png" alt="shield" />
+                <h3>Start your integration</h3>
+                <p class="secondary-text">
+                  Get up and running with Stripe in as litte as 10 minutes
+                </p>
+                <button class="secondary-button">API reference</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <footer class="footer">
+        <div class="section-container">
+          <div class="col">
+            <img src="assets/logo-dark.svg" alt="logo" />
+
+            <div class="icon-link">
+              <img src="assets/location-icon.png" alt="location" />
+              <a href="#">United States</a>
+            </div>
+            <div class="icon-link">
+              <img src="assets/comment-icon.png" alt="location" />
+              <a href="#">English (United States)</a>
+            </div>
+          </div>
+          <div class="col">
+            <h3>Products</h3>
+            <ul>
+              <li><a href="#">Atlas</a></li>
+              <li><a href="#">Billing</a></li>
+              <li><a href="#">Invoicing</a></li>
+              <li><a href="#">Payments</a></li>
+              <li><a href="#">Checkout</a></li>
+              <li><a href="#">Identity</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Use Cases</h3>
+            <ul>
+              <li><a href="#">eCommerce</a></li>
+              <li><a href="#">SaaS</a></li>
+              <li><a href="#">Marketplace</a></li>
+              <li><a href="#">Embedded Finance</a></li>
+              <li><a href="#">Crypto</a></li>
+              <li><a href="#">Creator Economy</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Resources</h3>
+            <ul>
+              <li><a href="#">Support Center</a></li>
+              <li><a href="#">Guides</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Licenses</a></li>
+              <li><a href="#">Privacy & Terms</a></li>
+              <li><a href="#">Cookies Settings</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
