--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     </nav>
 
     <main>
+      <!-- gradient bg -->
+      <canvas id="gradient-canvas"></canvas>
       <section class="hero">
         <div class="section-container two-column">
           <div class="col-left">
@@ -295,7 +297,11 @@
           <div class="col-right">
             <div class="swipe-sessions-card">
               <div class="card-top">
-                <img src="assets/swipe-sessions.png" alt="swipe-sessions" />
+                <img
+                  src="assets/swipe-sessions.png"
+                  alt="swipe-sessions"
+                  class="sessions-swipe"
+                />
                 <div class="avatars">
                   <img src="assets/avatar1.png" alt="avatar1" />
                   <img src="assets/avatar2.png" alt="avatar2" />
@@ -403,5 +409,7 @@
         </div>
       </footer>
     </main>
+
+    <script src="gradient.js"></script>
   </body>
 </html>
